; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ncurses/progs/extr_tset.c_failed.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ncurses/progs/extr_tset.c_failed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BUFSIZ = common dso_local global i32 0, align 4
@_nc_progname = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [3 x i8] c": \00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"tset: \00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @failed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @failed(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %6 = load i32, i32* @BUFSIZ, align 4
  %7 = zext i32 %6 to i64
  %8 = call i8* @llvm.stacksave()
  store i8* %8, i8** %3, align 8
  %9 = alloca i8, i64 %7, align 16
  store i64 %7, i64* %4, align 8
  %10 = load i8*, i8** @_nc_progname, align 8
  %11 = call i32 @strlen(i8* %10)
  %12 = add nsw i32 %11, 2
  %13 = sext i32 %12 to i64
  store i64 %13, i64* %5, align 8
  %14 = load i64, i64* %5, align 8
  %15 = trunc i64 %14 to i32
  %16 = trunc i64 %7 to i32
  %17 = sub nsw i32 %16, 12
  %18 = icmp slt i32 %15, %17
  br i1 %18, label %19, label %25

19:                                               ; preds = %1
  %20 = load i8*, i8** @_nc_progname, align 8
  %21 = trunc i64 %7 to i32
  %22 = call i32 @_nc_STRCPY(i8* %9, i8* %20, i32 %21)
  %23 = trunc i64 %7 to i32
  %24 = call i32 @_nc_STRCAT(i8* %9, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 %23)
  br label %28

25:                                               ; preds = %1
  %26 = trunc i64 %7 to i32
  %27 = call i32 @_nc_STRCPY(i8* %9, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i32 %26)
  br label %28

28:                                               ; preds = %25, %19
  %29 = load i8*, i8** %2, align 8
  %30 = call i32 @strlen(i8* %9)
  %31 = sext i32 %30 to i64
  %32 = sub i64 %7, %31
  %33 = sub i64 %32, 2
  %34 = trunc i64 %33 to i32
  %35 = call i32 @strncat(i8* %9, i8* %29, i32 %34)
  %36 = call i32 @perror(i32 %35)
  %37 = call i32 (...) @exit_error()
  %38 = load i8*, i8** %3, align 8
  call void @llvm.stackrestore(i8* %38)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @strlen(i8*) #2

declare dso_local i32 @_nc_STRCPY(i8*, i8*, i32) #2

declare dso_local i32 @_nc_STRCAT(i8*, i8*, i32) #2

declare dso_local i32 @perror(i32) #2

declare dso_local i32 @strncat(i8*, i8*, i32) #2

declare dso_local i32 @exit_error(...) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
